--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-mkdocs==1.6.0
-mkdocstrings==0.25.1
-torch==2.3.0
+mkdocs==1.6.1
+mkdocstrings==0.26.2
+mkdocstrings-python==1.12.2
 colorama==0.4.6
-numpy==1.26.0
